5th - done for mobile and tablet

--- a/src/scss/tablet.scss
+++ b/src/scss/tablet.scss
@@ -464,267 +464,65 @@ ul.hk-social {
 }
 
 .hk-milestones {
+  min-height: 100%;
+
   .hk-central_block {
-    > div {
-      margin-top: 10px;
-    }
+    height: 100%;
+    padding: 0 30px;
+    margin: 0;
 
-    .absolute-center {
-      width: calc(100% - 110px);
-      top: 130px;
-      transform: translate(-50%, 0%);
-      height: calc(100% - 130px);
+    .not-relative {
+      margin-top: 100px;
+      margin-left: 0;
 
-      .hk-milestones-block_headers {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-
-        > div+div {
-          margin-left: 0;
-        }
-
-        .hk-milestones-block_header-1 {
-          display: block;
-          width: 100%;
-
-          h4 {
-            display: inline-block;
-            width: 50%;
-          }
-
-          hr {
-            display: none;
-          }
-
-          p {
-            display: inline-block;
-            font-size: 20px;
-          }
-        }
-
-        .hk-milestones-block_header-2 {
-          display: block;
-          width: 100%;
-          margin-top: 20px;
-
-          h4 {
-            display: inline-block;
-            width: 50%;
-          }
-
-          hr {
-            display: none;
-          }
-
-          p {
-            display: inline-block;
-            font-size: 20px;
-          }
-        }
-
-        .hk-milestones-block_header-3 {
-          display: block;
-          width: 100%;
-          margin-top: 70px;
-
-          h4 {
-            display: inline-block;
-            width: 50%;
-          }
-
-          hr {
-            display: none;
-          }
-
-          p {
-            display: inline-block;
-            font-size: 20px;
-          }
-        }
-
-        .hk-milestones-block_header-4 {
-          display: block;
-          width: 100%;
-          margin-top: 70px;
-
-          h4 {
-            display: inline-block;
-            width: 50%;
-          }
-
-          hr {
-            display: none;
-          }
-
-          p {
-            display: inline-block;
-            font-size: 20px;
-          }
-        }
-
-        .hk-milestones-block_header-5 {
-          display: block;
-          width: 100%;
-          margin-top: 115px;
-
-          h4 {
-            display: inline-block;
-            width: 50%;
-          }
-
-          hr {
-            display: none;
-          }
-
-          p {
-            display: inline-block;
-            font-size: 20px;
-          }
-        }
+      h2 {
+        font-size: 26px;
       }
 
-      .hk-milestones-block_cards {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        max-width: 658px;
 
-        > div+div {
-          margin-left: 0;
+      >div {
+        padding: 20px 0;
+
+        h4 {
+          color: #53c3c8;
+          font-size: 18px;
+          font-weight: 500;
+          display: inline-block;
+          margin: 0;
+          width: 60%;
+          line-height: 22px;
         }
 
-        .hk-milestones-block {
-          position: absolute;
-          width: 100%;
-
-          p {
-            font-size: 20px;
-            padding: 0;
-            margin: 8px;
-
-            .mil-left {
-              width: 50%;
-              box-sizing: border-box;
-              display: block;
-              position: absolute;
-              padding-left: 25px;
-              left: 0;
-
-              br {
-                display: none;
-              }
-            }
-
-            .mil-right {
-              width: 50%;
-              box-sizing: border-box;
-              display: block;
-              position: absolute;
-              padding-left: 25px;
-              right: 0;
-
-              br {
-                display: none;
-              }
-            }
-          }
+        .hk-money {
+          float: right;
+          width: 40%;
+          font-size: 16px;
+          line-height: 22px;
+          text-align: right;
         }
 
-        .hk-block-1 {
-          height: 64px;
-          top: 60px;
-
-          p {
-            margin: 20px;
-          }
+        p {
+          line-height: 28px;
+          font-size: 20px;
+          padding: 10px 0 10px 15px;
+          display: block;
+          margin: 5px 0;
+          font-weight: 300;
         }
-
-        .hk-block-2 {
-          height: 112px;
-          top: 165px;
-
-          .mil-left:nth-child(1) {
-            top: 22px;
-          }
-
-          .mil-left:nth-child(2) {
-            top: 66px;
-          }
-
-          .mil-right {
-            top: 15px;
-            line-height: 42px;
-          }
+        .hk-p-1 {
+          background: #2f3f40;
         }
-
-        .hk-block-3 {
-          height: 112px;
-          top: 324px;
-
-          .mil-left:nth-child(1) {
-            top: 22px;
-          }
-
-          .mil-left:nth-child(2) {
-            top: 66px;
-          }
-
-          .mil-right {
-            top: 15px;
-            line-height: 42px;
-          }
+        .hk-p-2 {
+          background: #355a5b;
         }
-
-        .hk-block-4 {
-          height: 160px;
-          top: 480px;
-
-          .mil-left:nth-child(1) {
-            top: 22px;
-          }
-
-          .mil-left:nth-child(3) {
-            top: 62px;
-            line-height: 42px;
-          }
-
-          .mil-right:nth-child(2) {
-            top: 22px;
-          }
-
-          .mil-right:nth-child(4) {
-            top: 62px;
-            line-height: 42px;
-          }
+        .hk-p-3 {
+          background: #4c7876;
         }
-
-        .hk-block-5 {
-          height: 200px;
-          top: 680px;
-
-          .mil-left:nth-child(1) {
-            top: 22px;
-          }
-
-          .mil-left:nth-child(2) {
-            top: 66px;
-          }
-
-          .mil-left:nth-child(5) {
-            top: 106px;
-            line-height: 42px;
-          }
-
-          .mil-right:nth-child(3) {
-            top: 14px;
-            line-height: 42px;
-          }
-
-          .mil-right:nth-child(4) {
-            top: 106px;
-            line-height: 42px;
-          }
+        .hk-p-4 {
+          background: #529897;
+        }
+        .hk-p-5 {
+          background: #53c2c8;
         }
       }
     }
