--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -37,7 +37,7 @@ body {
   }
 
   .hk-navigation {
-    display: block;
+    display: none;
     position: fixed;
     top: 0;
     z-index: 7;
@@ -492,6 +492,7 @@ body {
           max-width: 100%;
           width: 100%;
           margin: 30px 0;
+          font-size: 26px;
           padding: 0 30px;
           box-sizing: border-box;
         }
