fix ecosystem bg

--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -219,7 +219,7 @@ body {
         }
 
         .hk-hacken-figure {
-          padding-right: 14px;
+          padding-right: 0;
           height: 355px;
           width: 320px;
           background: url("../img/screen-4-content-image.png");
