--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -77,6 +77,7 @@ body {
     right: auto;
     left: 0;
     background: #303030;
+    overflow: auto;
 
     .hk-tablet-menu_header {
       .hk-social {
@@ -107,6 +108,8 @@ body {
     width: 100vw;
 
     .hk-main {
+      min-height: 460px;
+
       .hk-central_block {
         margin: 0;
 
@@ -209,6 +212,7 @@ body {
 
     .hk-timeline {
       padding-bottom: 20px;
+      min-height: 575px;
 
       .hk-central_block {
         min-height: 100%;
@@ -238,7 +242,9 @@ body {
 
   .hk-hacken {
     min-height: 500px;
-
+    .fp-tableCell {
+      display: block;
+    }
     .hk-central_block {
       margin: 0;
 
@@ -308,13 +314,17 @@ body {
         margin: 0;
         padding: 0 30px;
 
-        h2 {
-          margin: 0;
-          font-size: 26px;
-        }
+        >div {
+          padding-bottom: 50px;
 
-        .hk-token_sale-figure {
-          margin-top: 10px;
+          h2 {
+            margin: 0;
+            font-size: 26px;
+          }
+
+          .hk-token_sale-figure {
+            margin-top: 10px;
+          }
         }
       }
     }
@@ -568,7 +578,7 @@ body {
       .partners-slider {
         .swiper-wrapper {
           max-width: 300px;
-          margin: auto;
+          margin: 0;
 
           img {
             width: 100%;
@@ -694,6 +704,10 @@ body {
       }
     }
   }
+}
+
+.advisor-modal-container, .hacken-modal-container, .main-modal-container {
+  overflow: auto;
 }
 
 .hk-bonus_timer-time {
