--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -184,6 +184,7 @@ body {
       .hk-central_block {
         margin: 0;
         height: 100%;
+        overflow: hidden;
 
         h2 {
           font-size: 26px;
@@ -620,6 +621,7 @@ body {
       height: 100%;
       padding: 0 30px;
       margin: 0;
+      overflow: hidden;
 
       h2 {
         font-size: 26px;
