fix brouken mobile scss and mistakes in mobile timeline

--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -332,6 +332,7 @@ body {
           @media all and (orientation: landscape){
             margin-bottom: 30px;
           }
+          }
         }
       }
     }
@@ -733,4 +734,4 @@ body {
   display: block;
   float: left;
   position: relative;
-}}
+}
