--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@ body {
   position: relative;
 }
 /*SLIDE 1*/
+
 .hk-main {
   background-color: #282828;
 }
@@ -344,6 +345,7 @@ body {
   padding-left: 2vw;
 }
 /*SLIDE 2*/
+
 .hk-about {
   background-color: #303030;
 }
@@ -528,6 +530,7 @@ p.hk-about-descr {
   transform: translate(-50%, -50%);
 }
 /*SLIDE 3*/
+
 .hk-timeline {
   background-color: #282828;
 }
@@ -738,7 +741,7 @@ p.hk-about-descr {
 }
 
 .hk-milestones .hk-central_block > div {
-  margin-top: 75px;
+  margin-top: 0;
   margin-left: 50px;
 }
 
@@ -753,7 +756,8 @@ p.hk-about-descr {
 
 .hk-milestones-block_headers {
   width: 100%;
-  height: 175px;
+  height: 115px;
+  margin-top: 40px;
 }
 
 .hk-milestones .absolute-center {
@@ -776,6 +780,7 @@ p.hk-about-descr {
   font-size: 22px;
   font-weight: 500;
   color: #55c3c8;
+  margin: 0;
 }
 
 .hk-milestones-block_headers p {
@@ -1712,6 +1717,60 @@ h2+hr {
 
   .hk-subscribe-icon {
     color: #ffffff;
+  }
+}
+@media all and (max-height: 800px) {
+  .none_on_short {
+    display: none;
+  }
+
+  .hk-milestones-block_cards {
+    height: 325px;
+  }
+
+  .hk-token_sale-figure {
+    margin-top: 0;
+  }
+
+  .hk-token_sale h2 {
+    margin-bottom: 0;
+  }
+
+  .team-image-active,
+  .team-slider .swiper-slide .team-image {
+    width: 180px;
+    height: auto;
+  }
+
+  .hk-team .hk-central_block > div.not-relative {
+    margin-top: 3em;
+    margin-left: 0;
+  }
+
+  .hk-burning .hk-central_block > div {
+    margin-top: 0;
+  }
+
+  p.hk-burning-descr {
+    line-height: 22px;
+  }
+
+  .hk-bounty .hk-central_block > div {
+    margin-top: 0;
+  }
+
+  .hk-bounty-pane h6 {
+    font-size: 20px;
+    line-height: 22px;
+    margin-top: 20px;
+  }
+
+  .hk-bonuses-figure {
+    margin-top: 50px;
+  }
+
+  .hk-timeline h2, .hk-hacken h2 {
+    margin-top: 0;
   }
 }
 @media all and (min-width: 1224px) {
