--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,7 +34,7 @@ body {
   justify-content: space-between;
 
   .hk-subscribe {
-    margin-top: 20px;
+    margin-top: 4em;;
     display: block;
     color: #ffffff;
     padding: 12px 24px;
@@ -46,7 +46,7 @@ body {
   }
 
   .hk-become {
-    margin-top: 20px;
+    margin-top: 4em;
   }
 }
 
@@ -1376,7 +1376,7 @@ h2+hr {
 }
 
 .advisors-slider .swiper-wrapper {
-  margin-top: 8vh;
+  margin-top: 3vh;
   display: flex;
   justify-content: flex-start;
 }
